--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch",
     "dev": "webpack serve --env=development",
     "build": "webpack --env=production"
   },
@@ -23,10 +23,15 @@
     "eslint-plugin-import": "^2.29.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.6.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.1.1",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "core-js": "^3.35.0",
+    "jest": "^29.7.0"
   }
 }
