chore : 웹팩 entry 파일 수정 및 eslint rules 수정

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,12 @@
   "rules": {
     "import/extensions": ["off"],
     "import/no-unresolved": "off",
-    "no-restricted-globals": "off"
+    "no-restricted-globals": "off",
+    "no-new": "off",
+    "no-undef": "off",
+    "no-underscore-dangle": "off",
+    "new-cap": "off",
+    "max-classes-per-file": "off",
+    "class-methods-use-this": "off"
   }
 }
