--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "axios": "^1.6.5",
-    "clsx": "^2.1.0"
+    "axios": "^1.6.5"
   }
 }
