--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/cli": "^7.23.4",
     "@babel/core": "^7.23.6",
     "@babel/preset-env": "^7.23.6",
+    "@types/jest": "^29.5.12",
     "babel-loader": "^9.1.3",
     "core-js": "^3.35.0",
     "css-loader": "^6.8.1",
@@ -34,6 +35,9 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "axios": "^1.6.5"
+    "@babel/preset-typescript": "^7.23.3",
+    "axios": "^1.6.5",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3"
   }
 }
