--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@babel/preset-typescript": "^7.23.3",
     "@types/jest": "^29.5.12",
     "babel-loader": "^9.1.3",
-    "ts-loader": "^9.5.1",
     "core-js": "^3.35.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.56.0",
@@ -32,12 +31,13 @@
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.1.1",
     "style-loader": "^3.3.3",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "axios": "^1.6.5",
-    "typescript": "^5.3.3"
+    "axios": "^1.6.5"
   }
 }
